Fixed About layout issue; changed colour palette

--- a/_variables.scss
+++ b/_variables.scss
@@ -1,12 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-$colour-primary: white;
-$colour-secondary: #d9bea5;
-$colour-hover: rgb(245 245 245);
 
-$colour-background-primary: #2C2A2A ;
-$colour-background-secondary: #3b3636;
-$colour-background-tertiary: #453f3f;
+//Provided palette
+//$colour-primary: white;
+// $colour-secondary: #d9bea5;
+// $colour-hover: rgb(245 245 245);
+
+// $colour-background-primary: #2C2A2A ;
+// $colour-background-secondary: #3b3636;
+// $colour-background-tertiary: #453f3f;
+
+//Purple palette
+$colour-primary: white;
+$colour-secondary: #dbb4b1;
+$colour-hover: rgb(241, 184, 241);
+
+$colour-background-primary: #311e39 ;
+$colour-background-secondary: #412846;
+$colour-background-tertiary: #4b3050;
 
 $font-title: "Cormorant", "Times New Roman", sans;
 $font-body: "Inter", "Tahoma", sans-serif;
